feature: add auth endpoints swaggers
