# src/Routes/Logout.ts
@@ -7,13 +7,13 @@ const logoutRouter = express.Router();
 logoutRouter.use(session);
 
 logoutRouter.post('/', requiresAuth, (req: Request, res: Response) => {
+	if (!req.session.username) return res.status(400).json({ message: "Nessuna sessione da disconnettere" })
 	req.session.destroy(err => {
 		if (err)
 			return res
 				.status(500)
 				.json({ errors: ['Impossibile distruggere la sessione!'] });
 	});
-
 	return res.status(200).json({ message: 'Disconnesso.' });
 });
 
